--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 
 dependencies {
     compile 'com.google.code.gson:gson:2.2.+'
-    compile 'org.apache.commons:commons-lang3:3.0.+'
+    compile 'org.apache.commons:commons-lang3:3.2.+'
     compile "com.android.support:support-v13:19.0.+"
 
     compile files('libs/volley.jar')
@@ -36,6 +36,13 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
+    }
+
+    buildTypes {
+        release {
+            runProguard true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
     }
 
     packagingOptions {
