Declare parent activities

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -29,12 +29,15 @@
             android:label="@string/app_name" />
         <activity
             android:name=".ProductDetailsActivity"
+            android:parentActivityName=".MainActivity"
             android:label="@string/title_activity_product_details" />
         <activity
             android:name=".ModifyProductActivity"
+            android:parentActivityName=".ProductDetailsActivity"
             android:label="@string/title_activity_modify_product" />
         <activity
             android:name=".VerifyAdditivesActivity"
+            android:parentActivityName=".ModifyProductActivity"
             android:label="@string/title_activity_verify_additives"/>
         <activity android:name=".ManualInputActivity"
             android:label="@string/title_activity_manual_input"
