--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
 
         <activity
             android:name=".SplashScreenActivity"
-            android:theme="@android:style/Theme.NoTitleBar"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,20 +29,34 @@
             android:label="@string/app_name" />
         <activity
             android:name=".ProductDetailsActivity"
-            android:parentActivityName=".MainActivity"
-            android:label="@string/title_activity_product_details" />
+            android:label="@string/title_activity_product_details"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
         <activity
             android:name=".ModifyProductActivity"
-            android:parentActivityName=".ProductDetailsActivity"
-            android:label="@string/title_activity_modify_product" />
+            android:label="@string/title_activity_modify_product"
+            android:parentActivityName=".ProductDetailsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ProductDetailsActivity" />
+        </activity>
         <activity
             android:name=".VerifyAdditivesActivity"
-            android:parentActivityName=".ModifyProductActivity"
-            android:label="@string/title_activity_verify_additives"/>
-        <activity android:name=".ManualInputActivity"
+            android:label="@string/title_activity_verify_additives"
+            android:parentActivityName=".ModifyProductActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ModifyProductActivity" />
+        </activity>
+        <activity
+            android:name=".ManualInputActivity"
             android:label="@string/title_activity_manual_input"
             android:parentActivityName=".MainActivity">
-            <meta-data android:name="android.support.PARENT_ACTIVITY"
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
 
