Add remaining steps to prototyped wizard

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -60,12 +60,29 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
-            android:name="no.vegetarguide.scanner.wizard.ObviouslyNotVegetarian"
-            android:label="@string/title_activity_manual_input"
+            android:name=".wizard.ObviouslyNotVegetarian"
+            android:label="Fra dyrekropper"
             android:parentActivityName=".ProductDetailsActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ProductDetailsActivity" />
+        </activity>
+        <activity
+            android:name=".wizard.MaybeVegan"
+            android:label="Utskilt fra dyrekropper"
+            android:parentActivityName=".wizard.ObviouslyNotVegetarian">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".wizard.ObviouslyNotVegetarian" />
+        </activity>
+
+        <activity
+            android:name=".wizard.UncertainIngredients"
+            android:label="Tvilstilfeller"
+            android:parentActivityName=".wizard.MaybeVegan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".wizard.MaybeVegan" />
         </activity>
 
     </application>
