--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -91,6 +91,9 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".wizard.MaybeVegan" />
         </activity>
+        <activity
+            android:name=".wizard.EnoughInformation"
+            android:label="Nok informasjon"/>
 
         <activity android:name=".about.AboutActivity"
             android:label="Om appen"
