--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.+'
     compile 'org.apache.commons:commons-lang3:3.2.+'
     compile "com.android.support:support-v13:19.1.+"
+    compile 'com.android.support:support-annotations:+'
 
     compile files('libs/volley.jar')
 }
